[CrOS Tether] Adjust Mobile data quick settings visibility.

When Bluetooth is disabled, we display a message in quick settings to
tell the user that enabling Mobile data will enable Bluetooth. However,
when multi-login is active, secondary users do not have the ability to
enable or disable Bluetooth themselves (this is restricted to primary
users only). Thus, the message no longer made sense, and the Mobile data
section as a whole was useless.

With this CL, that section is hidden for secondary users.

Bug: 763164, 672263
Change-Id: I478ab32aa4366881945cd423347f362b957a009a